<resources>
    <string name="app_name">TheKleaners</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Send Feedback</string>
    <string name="signIn">SignIn</string>
    <string name="signUp">SignUp</string>
    <string name="feedback">Feedback</string>
    <string name="descIndia">we also a leading provider of integrated environmental solution in India</string>
    <string name="providingIndustry">Providing the industry-leading solution you need</string>
    <string name="residenceDesc">Finding the right residential waste and recycling solution provider is an important decision. At TheKleaners, we reward the decision by providing a wide range of exceptional services and products.</string>
    <string name="offers">The Kleaners offers peace of</string>
    <string name="offersDesc">Our reliable services protect the environment while allowing your home or business to run like clockwork.</string>
    <string name="onlineToolsDesc">Payment scheduling, picking service and more</string>
    <string name="allAvailable">- all available at your fingertips</string>
    <string name="policy">Privacy Policy</string>
    <string name="continueDone">Continue !</string>
    <string name="notSatisfied">Not satisfied with one of our services? Let us know and</string>
    <string name="makeRight">we\'ll make it right</string>
    <string name="curbsidePickup">Waste Pickup Yard &amp; Food and Organic Waste Pickup Bulk Waste Pickup </string>
    <string name="recycleByMail">Batteries CFLs and Fluorescent Tubes</string>
    <string name="medicalWaste">Syringes and Lancets </string>
    <string name="otherServices">Construction and Facilities</string>
    <string name="recyclingService">Rigid Plastics/Bottles Metals</string>
    <string name="recyleByMailPoints">
                •	 Batteries\n
•	CFLs and Fluorescent Tubes\n
•	Syringes and Lancets\n
•	Electronic Recycling\n
</string>
    <string name="recycleDesc">Recycle bulbs, batteries and electronics responsibly. From home.</string>
    <string name="recycleByMailDesc">Battery and lightbulb recycling can seem complicated on the surface. Our Recycle-By-Mail
    program provide simple, safe ways to recycle.</string>
    <string name="recycleMailDesc">Every day you do little things to help the environment like turning off the lights and recycling aluminum cans, paper products and plastic. Did you know that you can also recycle batteries, compact fluorescent bulbs and printer cartridges? And that you can recycle all these materials without leaving your house?\n\n
Our Recycle by Mail program makes it easy for you to recycle many household items and keep harmful materials, like mercury, out of the environment. Best of all, it is easy.
</string>
    <string name="medicalDesc">Disposing of medical waste properly is a huge concern for all communities,large and small.
    For simple,convenient product to help you safely dcaispose of used syringes and lancets. Trust TheKleaners.</string>
    <string name="medicalWasteIntegrated">Our integrated healthcare solutions help you balance environmental, economic and regulatory demands.</string>
    <string name="medicalWasteIntegratedDesc">Our medical waste service start with safe medical waste practices. At TheKleaners, we collaborate with healthcare facilities of all sizes and types to handle their medical waste safely and responsibly. We understand the complexities of treating and disposing of these materials, and we deliver seamless, convenient solutions that protect the environment.\n\n
Disposing of medical waste properly is a huge concern for all communities, large and small. For simple, convenient products to help you safely dispose of used syringes and lancets, trust TheKleaners.
</string>
    <string name="medicalWasteCollectionSer">If you prefer disposal option only, we can help:</string>
    <string name="medicalType">•	Syringes\n
•	Lancets\n
•	LEARN MORE
</string>
    <string name="medicalItems">\n
        -Medical waste\n
        -Biohazardous waste\n
        -Pharmaceutical waste\n
        -Pathological waste\n
        -Chemotherapy waste\n
        -Non-hazardous pharmaceutical waste\n
        -Hazardous waste

    </string>
    <string name="curbsPoints">•	Recycling Pickup \n
•	Waste Pickup\n
•	Yard &amp; Food Waste Pickup\n
•	Food and Organic Waste Pickup\n
•	Bulk Waste Pickup\n

</string>
    <string name="curbsideDesc">These items include waste pickup yard &amp; food, organic waste and more. The at Your Door
        Special collection program can easily collect these items at your home. \n\n
    Help your communities keep garbage out of landfills and help the environment easily with Residential Curbside Pickup services from TheKleaners. </string>
    <string name="whatisCurbside">What is Curbside Recycling?</string>
    <string name="whatcanrecycle">What can I recycle?</string>
    <string name="whatisDesc">Curbside pickup is just like your regular curbside garbage pickup service. We’ll provide your residents with a large recycle bin that they can fill with place on their curb once a week for easy pickup. In many communities we offer single-stream recycling, allowing residents to put all recyclables into one bin.</string>
    <string name="acceptableItemFood">Acceptable items for Food &amp; Organic Waste Recycling can include: </string>
    <string name="whatcanpoints">Residents can recycle a wide variety of household items, including:\n
•	Paper products\n
•	Plastic bottles\n
•	Glass\n
•	Metal\n
•	Aluminum cans\n
…And more\n

</string>
    <string name="itemsFood">
        -Fruits and vegetables\n
        -Meat,poultry,seafood(bones and shells)\n
        -Bakery items and ingredient\n
        -Eggs and paper egg cartons\n
        -Plants,cut flower, potting soil\n
        -Coffee grounds, filters, tea bags\n
        -Paper product(napkin,paper towels)\n
        -Ice cream,yogurt,cottage cheese
    </string>
    <string name="recyclingServiceDesc"> Plastics are effectively being recycled at a rate of 2.4 billion pounds per
    year in INDIA. Doing so helps conserve fossil resources and saves landfill space. Plastic bottles are shred
    into flakes used for filling in sleeping bags, fleece jacket, carpet and insulation, while jugs and tubs and
    readily recyclable into new laundry detergent bottles, pens, picnic tables, fencing, and recycling containers.</string>
    <string name="metals">Metals:</string>
    <string name="metalsDesc">Approximately half of all soda cans,food cans and other aluminum products are recycled
    each year in the INDIA. The environmental and economic impact of these actions are enormous.</string>
    <string name="metalAcceptedItem">Generally accepted items include:</string>
    <string name="metalItems">\n
        -Tin cans\n
        -Aluminum cans\n
        -Steel cans\n
    </string>
    <string name="paper">Paper/Cardboard</string>
    <string name="paperDesc">Paper products make up 71 million tons of the muncipal waste stream of INDIA Of thet amount
    ,upwards of 63 percent(45 million tons) is recycled annually.</string>
    <string name="paperAcceptedItem">Generally accepted items include:</string>
    <string name="papercardboardItems">\n
        -Office paper\n
        -Magazines\n
        -Flattened cardboard\n
        -Newspaper\n
        -Phonebooks\n
        -Flattened cereal boxes\n
        -Junk mail\n
        -Paperboard\n
        -Flattened snack boxes
    </string>
    <string name="glass">Glass</string>
    <string name="glassDesc">Glass make up a large component of household due to its weight and density. Every
    metric ton of glass recycled save nearly 700 pounds of carbon dioxide from being released into the atmosphere.</string>
    <string name="glassesAcceptedItem">Generally accepted items include:</string>
    <string name="glassItems">\n
        -Food container and jars\n
        -Soft drinks and beer bottles\n
        -Wine and liquor bottles\n
    </string>
    <string name="otherService">Construction waste is any material on a jobsite from leftover rebar to roofing
    shingles. These materials, and any others used, require special handling to properly dispose of them.
    If it/s used in building, manufacture, or anything in between, TheKleaners is here to help you find
    the best way to dispose of it.</string>
    <string name="forgotPassDesc">Enter your email address and we will send you a link to reset your password</string>
    <string name="areyousureyouwanttoexit">Are you sure you want to exit</string>
    <string name="exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="carWashDesc">Car wash service at your doorstep!</string>
    <string name="aboutCarService">Have a weekend plans ever been wrecked due to critical last-minute
    trip to car wash, followed by needless delay with unreasonable excuses? Well, with the doorstep
    introduce by TheKleaners. Periodic check-up are as important to your car, as duty-free breaks.</string>
    <string name="yourCommittedPartDesc">TheKleaners works with communities like yours to create a safe,sustainable
    environment. Our trucks and people are on your streets every day, working to keep your community clean.</string>
    <string name="leadingProvider">We are also leading of integrated environmental solution in INDIA.</string>
    <string name="upcomingService">We are really excited about the upcoming service.</string>
    <string name="verificationDesc">It will detected automatically ,but if it is not detected you can put it below manually as well </string>
    <string name="helpDesc">Your TheKleaners Customer ID is a unique number on your invoice that is used to reference your account.
        With your Customer ID, your account will receive faster service from TheKleaners by:</string>
    <string name="warningNote">If you change your residential type after adding address.
        \nSo, please let us know by call or email will respond as soon as possible. You cannot change manually</string>
    <string name="helpDescPoint">
    -Expediting your request and account lookup when working with a customer representative, whether on the phone or via email, chat. \n
    -Making it easier to register your online account\n
    -Setting up online payments through your financial institution\n
    -Making an online payment through our mobile app\n

</string>
    <string name="cancel">CANCEL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="services">Services</string>
    <string name="visit_website">Visit Website</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Terms &amp; Privacy policy</string>
    <string name="help_center">Help Center</string>
    <string name="share">Share</string>
    <string name="version">Version</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to LOGOUT ?</string>
    <string name="yes_logout">Yes,Logout</string>
    <string name="alert">Alert</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="thank_you">Thank You !</string>
    <string name="wait_for_the_code_we_send_you">Wait for the code we send you..</string>
    <string name="enter_code_here">Enter Code here</string>
    <string name="pricing_guide">Pricing Guide</string>
    <string name="per_month">Per Month</string>
    <string name="no_hidden_charges">No Hidden Charges</string>
    <string name="done">Done</string>
    <string name="recycling_service">Recycling Service</string>
    <string name="daily_service">Daily Service</string>
    <string name="select_date">Select Date</string>
    <string name="_300">300</string>
</resources>