<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/mSelectServiceToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_gradient_toolbar">

            <ImageView
                android:id="@+id/mPricingGuideBackArrowFarmhouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="13dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_close" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pricing_guide"
                android:textColor="#fff"
                android:textSize="20sp" />

        </android.support.v7.widget.Toolbar>


        <RelativeLayout
            android:id="@+id/mParentRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/mSelectServiceToolbar"
            android:background="@drawable/color_gradient_toolbar">

            <TextView
                android:id="@+id/mPerMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:text="@string/per_month"
                android:textColor="#fff"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mPerMonth"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/no_hidden_charges"
                android:textColor="#fff"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toLeftOf="@+id/mSeventy"
                android:layout_toStartOf="@+id/mSeventy"
                android:contentDescription="@null"
                android:src="@drawable/ic_rupee" />

            <TextView
                android:id="@+id/mSeventy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_300"
                android:textColor="#fff"
                android:textSize="90sp" />

           <!-- <TextView
                android:id="@+id/mGST"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/mSeventy"
                android:layout_toRightOf="@+id/mSeventy"
                android:text="+ 19% GST"
                android:textColor="#fff"
                android:textSize="20sp" />
-->
        </RelativeLayout>


        <TextView
            android:id="@+id/mDailyServiceTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mParentRelativeLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/daily_service"
            android:textColor="#000"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/mDailyServiceAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mParentRelativeLayout"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/mDailyServiceTaken"
            android:layout_toRightOf="@+id/mDailyServiceTaken"
            android:text="@string/_300"
            android:textColor="#000"
            android:visibility="invisible" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/mParentRelativeLayout"
            android:weightSum="10">

            <TextView
                android:id="@+id/mDailyServiceTiming"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:background="#5FAB34"
                android:text="@string/select_date"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/mProceedNext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#fff"
                android:text="@string/done"
                android:gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:layout_weight="5"
                android:textColor="#fff"
                tools:targetApi="jelly_bean" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>