<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/mToolbarMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/mLogo"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@drawable/toolbar_logo" />


                <ImageView
                    android:id="@+id/mNumberVerficationBackArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_close_green" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/mToolbarMail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp" />

        <TextView
            android:id="@+id/mYouAreAlmostDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/wait_for_the_code_we_send_you"
            android:textColor="@color/colorAccent"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/mSecureAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mYouAreAlmostDone"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/verificationDesc"
            android:textColor="#626361"
            android:textSize="15sp" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/mTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mSecureAccount"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_code_here"
                android:inputType="number"
                android:maxLength="6"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mTextInput"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/color_gradient"
            android:text="@string/done"
            android:textColor="#fff" />

    </RelativeLayout>

</ScrollView>